SERVER-9315 Make sure local.slaves collection can be maintained in a system with security enabled